[package]
name = "wsa"
version = "0.1.3"
edition = "2024"
authors = ["Canmi(Canmi21)<t@canmi.icu>"]
description = "WebSocket-based API protocol."
license = "MIT"
repository = "https://github.com/ipel-dev/wsa"
homepage = "https://github.com/ipel-dev/wsa"
documentation = "https://github.com/ipel-dev/wsa?tab=readme-ov-file"
readme = "README.md"
keywords = ["wsa","websocket","api"]
categories = ["parsing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "wsa"
path = "src/lib.rs"